--- a/src/research.html
+++ b/src/research.html
@@ -35,7 +35,7 @@
 	<h2>Fast numbers</h2>
 
 	<ul>
-        <li> Books: 1 </li>
+        <li> Books: 2 </li>
 
         <li> Patents: 1 </li>
 
@@ -61,6 +61,12 @@
     <h3> Books </h3>
 
     <ul>
+
+        <li><p align=justify> Oscar Belmonte Fernández; Antonio Caballer Miedes; Andrea Castillo Hornero; Arturo Gascó Compte; Agustín José López Riera; Rubén García Vidal; Emilio Sansano Sansano; Raúl Montoliu Colás; Jacinto Pallarés Mestre; Ángel López Francés; Ruben Peris Martí.
+            <b>La Inteligencia Artificial y los asistentes conversacionales en la evaluación de la calidad de vida de las personas mayores de Castellón y su aplicación a la situación de alarma provocada por la COVID-19</b>. Fundación Dávalos-Fletcher, 2022. ISBN 9788409413379.
+        </p></li>
+
+
         <li><p align=justify> Jordi Conesa, Antoni Pérez-Navarro, Joaquin Torres-Sospedra, Raul Montoliu.
             <b>Geographical and Fingerprinting Data for Positioning and Navigation Systems. Challenges, Experiences and Technology</b>.
             1st Edition, 2018. ISBN: 9780128131893.     
