--- a/src/research.html
+++ b/src/research.html
@@ -373,7 +373,7 @@
                 R. Montoliu, A. Pérez-Navarro, J. Torres-Sospedra.
                 <b>Efficient tuning of kNN hyperparameters for indoor positioning with N-TBEA</b> 
                  International Congress on Ultra Modern Telecommunications and Control Systems, ICUMT'22.
-                [<a href="https://www.icumt.info/2022//">Conference web</a>]
+                [<a href="https://doi.org/10.1109/ICUMT57764.2022.9943377/">Online version</a>]
             </p>
         </li>
       
@@ -382,7 +382,7 @@
                 S. Lluva Plaza, R. Montoliu Colás, A. Jiménez Martín, J.M. Villadangos Carrizo, E. Sansano Sansano and J.J. García Domínguez.
                 <b>A Novel BLE RSSI Database for Analyzing Routines of Community-Dwelling Older Adults</b> 
                  International Congress on Ultra Modern Telecommunications and Control Systems, ICUMT'22.
-                [<a href="https://www.icumt.info/2022//">Conference web</a>]
+                [<a href="https://doi.org/10.1109/ICUMT57764.2022.9943410">Online version</a>]
             </p>
         </li>
 
@@ -427,7 +427,7 @@
                 Fernando J. Aranda, Fernando J. Álvarez, Felipe Parralejo, Emilio Sansano-Sansano, Raúl Montoliu.
                 <b>A novel method for in-home Gait Speed estimation in Health Monitoring Using Bluetooth Low Energy.</b> 
                 22nd IEEE International Conference on Industrial Technology, ICIT'21, 2021.
-                [<a href="https://ieee-icit2021.org/">online version</a>]
+                [<a href="https://doi.org/10.1109/ICIT46573.2021.9453578">online version</a>]
             </p>
         </li>
                 <li>
