--- a/src/research.html
+++ b/src/research.html
@@ -355,7 +355,7 @@
                 Raul Montoliu, Adrian Mon-Maroto, Emilio Sansano-Sansano and Ignacio Miralles-Tena
                 <b>Analysis of The Witcher 3: Wild hunt's quests</b>. 
                 I Congreso Español de Videojuegos (CEV'22)
-                [<a href="https://https://secivi.org/cev/index.html//">Conference web</a>]
+                [<a href="https://https://secivi.org/cev/index.html">Conference web</a>]
             </p>
         </li>
 
@@ -364,7 +364,7 @@
                 Raul Montoliu and Diego Villabrille Seca
                 <b>NTBOE: A new algorithm for efficiently playing multi-action adversarial games</b>.
                  I Congreso Español de Videojuegos (CEV'22)
-                [<a href="https://https://secivi.org/cev/index.html//">Conference web</a>]
+                [<a href="https://https://secivi.org/cev/index.html">Conference web</a>]
             </p>
         </li>
 
@@ -373,7 +373,7 @@
                 R. Montoliu, A. Pérez-Navarro, J. Torres-Sospedra.
                 <b>Efficient tuning of kNN hyperparameters for indoor positioning with N-TBEA</b> 
                  International Congress on Ultra Modern Telecommunications and Control Systems, ICUMT'22.
-                [<a href="https://doi.org/10.1109/ICUMT57764.2022.9943377/">Online version</a>]
+                [<a href="https://doi.org/10.1109/ICUMT57764.2022.9943377">Online version</a>]
             </p>
         </li>
       
