--- a/src/research.html
+++ b/src/research.html
@@ -88,7 +88,11 @@
 
     <h3> Journals</h3>
     <ul>
-
+         <li>
+            <p align="justify">Juan José Muñoz Falcó, Raúl Montoliu Colás. 
+            <b>The “Room” in Text Adventure Games and Analysis of Real Geographical Locations in Aventuras AD Games</b> Transactions of the Digital Games Research Association, Vol 6 (1), 2022. [<a href="https://doi.org/10.26503/todigra.v6i1.128">https://doi.org/10.26503/todigra.v6i1.128</a>].
+            </p>
+        </li>
 
          <li>
             <p align="justify">A. Batalla-Gavalda, J.V. Beltran-Garrido, G. Garrosa-Martín, P. Cecilia-Gallego, R. Montoliu, F. Cobi. 
