--- a/src/research.html
+++ b/src/research.html
@@ -51,7 +51,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       45  </li>
+        <li> Conferences:       47  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -354,6 +354,19 @@
 
     <h3> Conferences</h3>
     <ul>
+        <li>
+            <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Jesús Aguiló Salinas, Inmaculada Remolar. 
+            <b>Predicting student performance with virtual resources interaction data</b> 19th International Conference on Artificial Intelligence Applications and Innovations (AIAI'23). ACCEPTED. 
+             </p>
+         </li>
+
+        <li>
+            <p align="justify">Juan José Muñoz Falcó, Raul Montoliu. 
+            <b>Análisis de los personajes no jugadores en los juegos de Aventuras AD</b> Congreso Internacional de DiGRASpain (DIGRAES'23)
+            <a href="http://xn--diseoynarracionvideojuegos-krc.es/digraes23/assets/files/DiGRAES23_Libro_de_Actas_v1.pdf">Online version</a> (pp. 68-71). 
+            </p>
+         </li>
+
         <li>
             <p align="justify">
                 Raul Montoliu, Adrian Mon-Maroto, Emilio Sansano-Sansano and Ignacio Miralles-Tena
