--- a/src/research.html
+++ b/src/research.html
@@ -51,7 +51,7 @@
 
 		<li> Book chapters:     10</li>
         
-        <li> Conferences:       47  </li>
+        <li> Conferences:       48  </li>
 		
         <li> Pre prints (arXiv): 2 </li>
 
@@ -354,6 +354,12 @@
 
     <h3> Conferences</h3>
     <ul>
+        <li>
+            <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
+            <b>Predicting student performance using interactions data with virtual resources at different stages of the course</b> 13th International Conference on Methodologies and Intelligent Systems for Technology Enhanced Learning (MIS4TEL'23). ACCEPTED. 
+            </p>
+        </li>
+
         <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Jesús Aguiló Salinas, Inmaculada Remolar. 
             <b>Predicting student performance with virtual resources interaction data</b> 19th International Conference on Artificial Intelligence Applications and Innovations (AIAI'23). ACCEPTED. 
