--- a/old_publications.html
+++ b/old_publications.html
@@ -308,6 +308,14 @@
 
     <h3> Conferences</h3>
     <ul>
+
+        <li>
+            <p align="justify">Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
+            <b>Automatic and non-invasive analysis of behavioural routines using BLE technology.</b> 
+            13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23) ACCEPTED.
+            </p>
+        </li>
+
         <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
             <b>Predicting student performance using interactions data with virtual resources at different stages of the course</b> 13th International Conference on Methodologies and Intelligent Systems for Technology Enhanced Learning (MIS4TEL'23). ACCEPTED. 
