--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,14 @@
 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
+					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23) ACCEPTED. 
+            		</p>
+				</div>
+			</div>	
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 				<p>A. Pérez-Navarro, R. Montoliu, E. Sansano, M. Martínez-García, R. Femenia, J. Torres-Sospedra. 
 				<b>Accuracy of a single position estimate for kNN-based fingerprinting indoor positioning applying error propagation theory</b>
 				IEEE Sensors Journal, 2023.
