--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 				<p>A. Pérez-Navarro, R. Montoliu, E. Sansano, M. Martínez-García, R. Femenia, J. Torres-Sospedra. 
 				<b>Accuracy of a single position estimate for kNN-based fingerprinting indoor positioning applying error propagation theory</b>
-				IEEE Sensors Journal, 2023.
+				IEEE Sensors Journal, vol 23 (16), pp 18765-18775, 2023.
             	<a href="https://doi.org/10.1109/JSEN.2023.3287856">https://doi.org/10.1109/JSEN.2023.3287856</a>
             	</p>
 				</div>
