--- a/old_publications.html
+++ b/old_publications.html
@@ -42,6 +42,13 @@
 
     <h3> Journals</h3>
     <ul>
+        <li>
+            <p align="justify">A. Pérez-Navarro, R. Montoliu, E. Sansano, M. Martínez-García, R. Femenia, J. Torres-Sospedra. 
+            <b>Accuracy of a single position estimate for kNN-based fingerprinting indoor positioning applying error propagation theory</b>
+            IEEE Sensors Journal, vol 23 (16), pp 18765-18775, 2023.
+            <a href="https://doi.org/10.1109/JSEN.2023.3287856">https://doi.org/10.1109/JSEN.2023.3287856</a>
+            </p>
+        </li>
          <li>
             <p align="justify">Juan José Muñoz Falcó, Raúl Montoliu Colás. 
             <b>The “Room” in Text Adventure Games and Analysis of Real Geographical Locations in Aventuras AD Games</b> Transactions of the Digital Games Research Association, Vol 6 (1), 2022. [<a href="https://doi.org/10.26503/todigra.v6i1.128">https://doi.org/10.26503/todigra.v6i1.128</a>].
@@ -324,8 +331,9 @@
 
         <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Jesús Aguiló Salinas, Inmaculada Remolar. 
-            <b>Predicting student performance with virtual resources interaction data</b> 19th International Conference on Artificial Intelligence Applications and Innovations (AIAI'23). ACCEPTED. 
-             </p>
+            <b>Predicting student performance with virtual resources interaction data</b> 19th International Conference on Artificial Intelligence Applications and Innovations (AIAI'23). 
+            <a href="https://doi.org/10.1007/978-3-031-34111-3_39">https://doi.org/10.1007/978-3-031-34111-3_39</a>
+            </p>
          </li>
 
         <li>
