--- a/publications.html
+++ b/publications.html
@@ -338,7 +338,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
     				<p>
-            		<a href="old_publications.html">Click here to see all me previous publications</a>.
+            		<a href="all_publications.html">Click here to see all my publications</a>.
             		</p>
             		
 				</div>
