--- a/publications.html
+++ b/publications.html
@@ -77,10 +77,27 @@
 				</div>
 			</div>	
 
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Raúl Montoliu, Alejandro Estaben, César Díaz, Sergi Fuster, Diego Pérez-Liebana. 
+					<b>TotalBotWar: An Innovative AI Challenge and Competition for Pseudo Real-time Multi-action Games</b> 2nd Congreso Español de Videojuegos (CEV'23), ACCEPTED. 
+            		</p>
+				</div>
+			</div>	
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Gaetano Luca De Palma, Antoni Perez-Navarro, Raul Montoliu. 
+					<b> Convolutional Neural Network as sensor fusion algorithm applied to IPIN2019 dataset</b> 18th International Conference on Location Based Services (LBS'23), ACCEPTED. 
+            		</p>
+				</div>
+			</div>	
+
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
-					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23) ACCEPTED. 
+					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23), ACCEPTED. 
             		</p>
 				</div>
 			</div>	
@@ -98,7 +115,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
-					<b>Análisis automático y no invasivo de las rutinas de comportamiento mediante la tecnología BLE</b> 30th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’23) ACCEPTED. 
+					<b>Análisis automático y no invasivo de las rutinas de comportamiento mediante la tecnología BLE</b> 30th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’23) 
             		</p>
 				</div>
 			</div>	
@@ -106,7 +123,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
-					<b>Predicting student performance using interactions data with virtual resources at different stages of the course</b> 13th International Conference on Methodologies and Intelligent Systems for Technology Enhanced Learning (MIS4TEL'23). ACCEPTED. 
+					<b>Predicting student performance using interactions data with virtual resources at different stages of the course</b> 13th International Conference on Methodologies and Intelligent Systems for Technology Enhanced Learning (MIS4TEL'23). <a href="https://link.springer.com/chapter/10.1007/978-3-031-41226-4_23">online version</a>. 
             		</p>
 				</div>
 			</div>	
