--- a/all_publications.html
+++ b/all_publications.html
@@ -317,6 +317,19 @@
     <ul>
 
         <li>
+            <p align="justify">Raúl Montoliu, Alejandro Estaben, César Díaz, Sergi Fuster, Diego Pérez-Liebana. 
+            <b>TotalBotWar: An Innovative AI Challenge and Competition for Pseudo Real-time Multi-action Games</b> 2nd Congreso Español de Videojuegos (CEV'23), ACCEPTED. 
+            </p>
+        </li>  
+
+        <li>
+            <p align="justify">Gaetano Luca De Palma, Antoni Perez-Navarro, Raul Montoliu. 
+            <b> Convolutional Neural Network as sensor fusion algorithm applied to IPIN2019 dataset</b> 18th International Conference on Location Based Services (LBS'23), ACCEPTED. 
+             </p>
+        </li>  
+
+
+        <li>
             <p align="justify">Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
             <b>Automatic and non-invasive analysis of behavioural routines using BLE technology.</b> 
             13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23) ACCEPTED.
