--- a/all_publications.html
+++ b/all_publications.html
@@ -43,6 +43,13 @@
     <h3> Journals</h3>
     <ul>
         <li>
+            <p align="justify">Abraham Batalla-Gavalda, Raul Montoliu, Jose Vicente Beltrán-Garrido, Francesc Corbi. 
+            <b>A new database of the analysis of the physiological needs in amateur female basketball during official matches</b> Scientific Data volume 10, Article number: 854 (2023). <a href="https://www.nature.com/articles/s41597-023-02747-2">https://www.nature.com/articles/s41597-023-02747-2</a>. Dataset:<a href="https://zenodo.org/records/10054915">https://zenodo.org/records/10054915</a>. 
+            </p>
+        </li>  
+
+
+        <li>
             <p align="justify">A. Pérez-Navarro, R. Montoliu, E. Sansano, M. Martínez-García, R. Femenia, J. Torres-Sospedra. 
             <b>Accuracy of a single position estimate for kNN-based fingerprinting indoor positioning applying error propagation theory</b>
             IEEE Sensors Journal, vol 23 (16), pp 18765-18775, 2023.
