--- a/publications.html
+++ b/publications.html
@@ -77,6 +77,14 @@
 				</div>
 			</div>	
 
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Abraham Batalla-Gavalda, Raul Montoliu, Jose Vicente Beltrán-Garrido, Francesc Corbi. 
+					<b>A new database of the analysis of the physiological needs in amateur female basketball during official matches</b> Scientific Data volume 10, Article number: 854 (2023). <a href="https://www.nature.com/articles/s41597-023-02747-2">https://www.nature.com/articles/s41597-023-02747-2</a>. Dataset:<a href="https://zenodo.org/records/10054915">https://zenodo.org/records/10054915</a>. 
+            		</p>
+				</div>
+			</div>	
+
 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
