--- a/all_publications.html
+++ b/all_publications.html
@@ -336,6 +336,20 @@
         </li>  
 
 
+
+        <li>
+                    <p>Joaquín Torres-Sospedra, Cristiano Pendão, Ivo Silva, Filipe Meneses, Darwin Quezada-Gaibor, Raúl Montoliu, Antonino Crivello, Antoni Pérez-Navarro, Adriano Moreira. 
+                    <b>Let’s Talk about k-NN for Indoor Positioning: Myths and Facts in RF-based Fingerprinting</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23). <a href="https://doi.org/10.1109/IPIN57070.2023.10332535">https://doi.org/10.1109/IPIN57070.2023.10332535</a> 
+                    </p>
+        </li>  
+
+
+        <li>
+                    <p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
+                    <b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23). <a href="https://ceur-ws.org/Vol-3581/190_WiP.pdf">Online version</a>
+                    </p>
+        </li> 
+
         <li>
             <p align="justify">Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
             <b>Automatic and non-invasive analysis of behavioural routines using BLE technology.</b> 
