--- a/publications.html
+++ b/publications.html
@@ -122,8 +122,17 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Joaquín Torres-Sospedra, Cristiano Pendão, Ivo Silva, Filipe Meneses, Darwin Quezada-Gaibor, Raúl Montoliu, Antonino Crivello, Antoni Pérez-Navarro, Adriano Moreira. 
+					<b>Let’s Talk about k-NN for Indoor Positioning: Myths and Facts in RF-based Fingerprinting</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23). <a href="https://doi.org/10.1109/IPIN57070.2023.10332535">https://doi.org/10.1109/IPIN57070.2023.10332535</a> 
+            		</p>
+				</div>
+			</div>	
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
-					<b>Análisis automático y no invasivo de las rutinas de comportamiento mediante la tecnología BLE</b> 30th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’23) 
+					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23). <a href="https://ceur-ws.org/Vol-3581/190_WiP.pdf">Online version</a>
             		</p>
 				</div>
 			</div>	
