--- a/all_publications.html
+++ b/all_publications.html
@@ -325,7 +325,7 @@
 
         <li>
             <p align="justify">Raúl Montoliu, Alejandro Estaben, César Díaz, Sergi Fuster, Diego Pérez-Liebana. 
-            <b>TotalBotWar: An Innovative AI Challenge and Competition for Pseudo Real-time Multi-action Games</b> 2nd Congreso Español de Videojuegos (CEV'23), ACCEPTED. 
+            <b>TotalBotWar: An Innovative AI Challenge and Competition for Pseudo Real-time Multi-action Games</b> 2nd Congreso Español de Videojuegos (CEV'23),  <a href="https://ceur-ws.org/Vol-3599/paper_3.pdf">https://ceur-ws.org/Vol-3599/paper_3.pdf</a>. 
             </p>
         </li>  
 
