--- a/all_publications.html
+++ b/all_publications.html
@@ -323,6 +323,26 @@
     <h3> Conferences</h3>
     <ul>
 
+
+            <li>
+            <p align="justify">Javier Gaviña Rueda, Raúl Montoliu, Emilio Sansano Sansano,, Marina Martínez García.. 
+                    <b>El Uso de Dispositivos Electrónicos para Monitorizar el Comportamiento Humano</b> 
+                    31th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’24). 
+                    
+            </p>
+        </li>  
+
+
+
+            <li>
+            <p align="justify">I. Lanza-Cruz, R. Montoliu Colás, A. Martínez-Martínez, I. Remolar Quintana. 
+                    <b>Advancing Virtual Learning: A Review of Moodle For The Optimization Of Online Education</b> 
+                    Proceedings of INTED2024, pp. 4056-4064. (2024) <a href="https://doi.org/10.21125/inted.2024.1040 ">https://doi.org/10.21125/inted.2024.1040 </a>. 
+                    
+            </p>
+        </li>  
+
+
         <li>
             <p align="justify">Raúl Montoliu, Alejandro Estaben, César Díaz, Sergi Fuster, Diego Pérez-Liebana. 
             <b>TotalBotWar: An Innovative AI Challenge and Competition for Pseudo Real-time Multi-action Games</b> 2nd Congreso Español de Videojuegos (CEV'23),  <a href="https://ceur-ws.org/Vol-3599/paper_3.pdf">https://ceur-ws.org/Vol-3599/paper_3.pdf</a>. 
