--- a/publications.html
+++ b/publications.html
@@ -71,11 +71,43 @@
 	</nav>
 
 	<div id="fh5co-about">
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+				<h2>2024</h2>
+				</div>
+			</div>	
+
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Javier Gaviña Rueda, Raúl Montoliu, Emilio Sansano Sansano,, Marina Martínez García.. 
+					<b>El Uso de Dispositivos Electrónicos para Monitorizar el Comportamiento Humano</b> 
+					31th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’24). 
+            		</p>
+				</div>
+			</div>	
+
+
+
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>I. Lanza-Cruz, R. Montoliu Colás, A. Martínez-Martínez, I. Remolar Quintana. 
+					<b>Advancing Virtual Learning: A Review of Moodle For The Optimization Of Online Education</b> 
+					Proceedings of INTED2024, pp. 4056-4064. (2024) <a href="https://doi.org/10.21125/inted.2024.1040 ">https://doi.org/10.21125/inted.2024.1040 </a>. 
+            		</p>
+				</div>
+			</div>	
+
+
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 				<h2>2023</h2>
 				</div>
 			</div>	
+
+
 
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
@@ -97,7 +129,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Gaetano Luca De Palma, Antoni Perez-Navarro, Raul Montoliu. 
-					<b> Convolutional Neural Network as sensor fusion algorithm applied to IPIN2019 dataset</b> 18th International Conference on Location Based Services (LBS'23), ACCEPTED. 
+					<b> Convolutional Neural Network as sensor fusion algorithm applied to IPIN2019 dataset</b> 18th International Conference on Location Based Services (LBS'23). 
             		</p>
 				</div>
 			</div>	
@@ -105,7 +137,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Javier Gaviña Rueda, Emilio Sansano Sansano, Raúl Montoliu Colás, Marina Martínez García, Sergio Lluva Plaza, Ana Jiménez Martín, José M. Villadangos Carrizo and Juan Jesús García Domínguez. 
-					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23), ACCEPTED. 
+					<b>Automatic and non-invasive analysis of behavioural routines using BLE technology</b> 13th International Conference on Indoor Positioning and Indoor Navigation (IPIN'23). 
             		</p>
 				</div>
 			</div>	
