--- a/repnin/index.html
+++ b/repnin/index.html
@@ -78,6 +78,7 @@
 					<div class="display-t"  style="height: 60vh;">
 						<div class="display-tc animate-box title-center" data-animate-effect="fadeIn">
 							<h1>REPNIN++ - Red de posicionamiento y navegación en interiores</h1>
+							<h2>RED2022-134355-T</h2>
 							<h1><img src="./images/ministerio.jpg" width="50%"></h1>
 						</div>
 					</div>
