--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,9 @@
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Cristian Valero-Abundio, Raúl Montoliu, Marina Martínez-García, Emilio Sansano-Sansano, Joaquín Torres-Sospedra, Antoni Pérez-Navarro. 
 					<b>Using ellipses to improve the estimation of the error bound on indoor positioning problems</b>.
-					4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). ACCEPTED.
+					4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). 
+										<a href="./docs/StudentBestPaperAwardISSI2024.pdf">Best student paper award</a>. 
+
 				</div>
 			</div>
 
@@ -92,7 +94,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p> Louis Royet, Joaquín Torres-Sospedra, Raúl Montoliu, Antoni Pérez-Navarro
 					<b>Analysis of the origin of differences in position among different fingerprinting datasets</b>.
-					  4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). ACCEPTED.
+					  4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). 
 				</div>
 			</div>
 
@@ -101,7 +103,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p> Gaetano Luca De Palma, Antoni Perez-Navarro and Raúl Montoliu. 
 					<b>Comparative Analysis of Pedestrian Dead Reckoning Algorithms for Indoor and Outdoor Localization</b>.
-					 14th International Conference on Indoor Positioning and Indoor Navigation (IPIN'24). ACCEPTED.
+					 14th International Conference on Indoor Positioning and Indoor Navigation (IPIN'24). 
 				</div>
 			</div>
 
