--- a/all_publications.html
+++ b/all_publications.html
@@ -42,6 +42,17 @@
 
     <h3> Journals</h3>
     <ul>
+
+
+
+
+               <li>
+            <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
+            <b>Which videos are better for the students? Analyzing the student behavior and video metadata. ACCEPTED. 
+            </p>
+        </li>  
+
+
         <li>
             <p align="justify">Abraham Batalla-Gavalda, Raul Montoliu, Jose Vicente Beltrán-Garrido, Francesc Corbi. 
             <b>A new database of the analysis of the physiological needs in amateur female basketball during official matches</b> Scientific Data volume 10, Article number: 854 (2023). <a href="https://www.nature.com/articles/s41597-023-02747-2">https://www.nature.com/articles/s41597-023-02747-2</a>. Dataset:<a href="https://zenodo.org/records/10054915">https://zenodo.org/records/10054915</a>. 
