--- a/publications.html
+++ b/publications.html
@@ -78,6 +78,14 @@
 				</div>
 			</div>	
 
+		<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
+					<b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>.
+					Heliyon. ACCEPTED.
+				</div>
+			</div>
+
 
 		<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
