--- a/all_publications.html
+++ b/all_publications.html
@@ -46,9 +46,9 @@
 
 
 
-               <li>
+        <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
-            <b>Which videos are better for the students? Analyzing the student behavior and video metadata. ACCEPTED. 
+            <b>Which videos are better for the students? Analyzing the student behavior and video metadata. Heliyon (2024). In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
             </p>
         </li>  
 
