--- a/all_publications.html
+++ b/all_publications.html
@@ -338,7 +338,7 @@
         <li>
             <p align="justify">Cristian Valero-Abundio, Raúl Montoliu, Marina Martínez-García, Emilio Sansano-Sansano, Joaquín Torres-Sospedra, Antoni Pérez-Navarro. 
                     <b>Using ellipses to improve the estimation of the error bound on indoor positioning problems</b>.
-                    4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). ACCEPTED.
+                    4th International Symposium on Sensing and Instrumentation in IoT Era (ISSI-24). <a href="https://doi.org/10.1109/ISSI63632.2024.10720469">https://doi.org/10.1109/ISSI63632.2024.10720469</a>.
                 </p>
         </li>  
 
