--- a/all_publications.html
+++ b/all_publications.html
@@ -43,12 +43,16 @@
     <h3> Journals</h3>
     <ul>
 
-
+         <li>
+            <p align="justify">Raul Montoliu, Pere Urbón-Bayes, Gabriel Daza, Abraham Batalla-Gavalda. 
+            <b>A New Dataset for Spatial, Temporal, and Tactical Analysis of Female Handball Player Movements</b>. Data in Brief. In Press.
+            </p>
+        </li> 
 
 
         <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
-            <b>Which videos are better for the students? Analyzing the student behavior and video metadata. Heliyon (2024). In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
+            <b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>. Heliyon (2024). In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
             </p>
         </li>  
 
