--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,14 @@
 
 		<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Raul Montoliu, Pere Urbón-Bayes, Gabriel Daza, Abraham Batalla-Gavalda. 
+					<b>A New Dataset for Spatial, Temporal, and Tactical Analysis of Female Handball Player Movements</b>.
+					Data in Brief. In Press.
+				</div>
+		</div>
+
+		<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
 					<b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>.
 					Heliyon. In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
