--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
 					<b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>.
-					Heliyon. In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
+					Heliyon. Volume 10, Issue 21, 2024. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
 				</div>
 			</div>
 
