--- a/all_publications.html
+++ b/all_publications.html
@@ -52,7 +52,7 @@
 
         <li>
             <p align="justify">Alex Martínez-Martínez, Raul Montoliu, Inmaculada Remolar. 
-            <b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>. Heliyon (2024). In Press. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
+            <b>Which videos are better for the students? Analyzing the student behavior and video metadata</b>. Heliyon (2024). Volume 10, Issue 21, 2024. <a href="https://doi.org/10.1016/j.heliyon.2024.e39682">https://doi.org/10.1016/j.heliyon.2024.e39682</a>
             </p>
         </li>  
 
