--- a/publications.html
+++ b/publications.html
@@ -78,11 +78,20 @@
 				</div>
 			</div>	
 
+
+		<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Abraham Batalla-Gavalda, Jose Vicente Beltran-Garrido, Gerson Garrosa-Martín, Raúl Montoliu-Colás, and Francisco Corbi.
+					<b>Do Stress Test Reflect the Intensity During Competition in Amateur Men's Basketball?</b>.
+					Kinesiology, Vol. 56 No. 2, 2024.<a href="https://hrcak.srce.hr/en/clanak/468990">https://hrcak.srce.hr/en/clanak/468990</a>.
+				</div>
+		</div>	
+
 		<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Raul Montoliu, Pere Urbón-Bayes, Gabriel Daza, Abraham Batalla-Gavalda. 
 					<b>A New Dataset for Spatial, Temporal, and Tactical Analysis of Female Handball Player Movements</b>.
-					Data in Brief. In Press.
+					Data in Brief, Volume 57, 2024. <a href="https://doi.org/10.1016/j.dib.2024.111116">https://doi.org/10.1016/j.dib.2024.111116</a>.
 				</div>
 		</div>
 
