--- a/all_publications.html
+++ b/all_publications.html
@@ -43,11 +43,22 @@
     <h3> Journals</h3>
     <ul>
 
-         <li>
-            <p align="justify">Raul Montoliu, Pere Urbón-Bayes, Gabriel Daza, Abraham Batalla-Gavalda. 
-            <b>A New Dataset for Spatial, Temporal, and Tactical Analysis of Female Handball Player Movements</b>. Data in Brief. In Press.
+
+
+        <li>
+            <p align="justify">braham Batalla-Gavalda, Jose Vicente Beltran-Garrido, Gerson Garrosa-Martín, Raúl Montoliu-Colás, and Francisco Corbi.
+            <b>Do Stress Test Reflect the Intensity During Competition in Amateur Men's Basketball?</b>. Kinesiology, Vol. 56 No. 2, 2024.<a href="https://hrcak.srce.hr/en/clanak/468990">https://hrcak.srce.hr/en/clanak/468990</a>.
             </p>
         </li> 
+
+
+        <li>
+            <p align="justify">Raul Montoliu, Pere Urbón-Bayes, Gabriel Daza, Abraham Batalla-Gavalda. 
+            <b>A New Dataset for Spatial, Temporal, and Tactical Analysis of Female Handball Player Movements</b>. Data in Brief, Volume 57, 2024. <a href="https://doi.org/10.1016/j.dib.2024.111116">https://doi.org/10.1016/j.dib.2024.111116</a>.
+            </p>
+        </li> 
+
+
 
 
         <li>
