--- a/all_publications.html
+++ b/all_publications.html
@@ -44,9 +44,23 @@
     <ul>
 
 
+    <div class="row animate-box">
+            <div class="col-md-8 col-md-offset-2 text-center heading-section">
+                <p>Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez. 
+                <b> Extracting daily routines from raw RSSI data</b>.
+                Sensors, 2025. 
+                </div>
+            </div>
 
         <li>
-            <p align="justify">braham Batalla-Gavalda, Jose Vicente Beltran-Garrido, Gerson Garrosa-Martín, Raúl Montoliu-Colás, and Francisco Corbi.
+            <p align="justify">Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez.
+            <b>Extracting daily routines from raw RSSI data</b>. Sensors, 2025.
+            </p>
+        </li> 
+
+
+        <li>
+            <p align="justify">Abraham Batalla-Gavalda, Jose Vicente Beltran-Garrido, Gerson Garrosa-Martín, Raúl Montoliu-Colás, and Francisco Corbi.
             <b>Do Stress Test Reflect the Intensity During Competition in Amateur Men's Basketball?</b>. Kinesiology, Vol. 56 No. 2, 2024.<a href="https://hrcak.srce.hr/en/clanak/468990">https://hrcak.srce.hr/en/clanak/468990</a>.
             </p>
         </li> 
