--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,21 @@
 
 	<div id="fh5co-about">
 
+
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center heading-section">
+			<h2>2025</h2>
+			</div>
+		</div>	
+
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center heading-section">
+				<p>Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez. 
+				<b> Extracting daily routines from raw RSSI data</b>.
+				Sensors, 2025. 
+				</div>
+			</div>
+
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 				<h2>2024</h2>
