--- a/all_publications.html
+++ b/all_publications.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+ <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Your description goes here" />
@@ -46,7 +46,7 @@
 
         <li>
             <p align="justify">Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez.
-            <b>Extracting daily routines from raw RSSI data</b>. Sensors, 2025.
+            <b>Extracting daily routines from raw RSSI data</b>.  Sensors, 25(9), 2745. 2025. <a href="https://doi.org/10.3390/s25092745">https://doi.org/10.3390/s25092745</a>. 
             </p>
         </li> 
 
