--- a/publications.html
+++ b/publications.html
@@ -80,10 +80,10 @@
 		</div>	
 
 		<div class="row animate-box">
-			<div class="col-md-8 col-md-offset-2 text-center heading-section">
-				<p>Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez. 
-				<b> Extracting daily routines from raw RSSI data</b>.
-				Sensors, 2025. 
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez. 
+					<b> Extracting daily routines from raw RSSI data</b>.
+					Sensors, 25(9), 2745. 2025. <a href="https://doi.org/10.3390/s25092745">https://doi.org/10.3390/s25092745</a>. 
 				</div>
 			</div>
 
