--- a/all_publications.html
+++ b/all_publications.html
@@ -43,6 +43,14 @@
     <h3> Journals</h3>
     <ul>
 
+ 
+
+
+        <li>
+            <p align="justify">Nicola Saccomanno, Andrea Brunello, Angelo Montanari, Raul Montoliu, Emilio Sansano-Sansano, Adriano Moreira, Joaquín Torres-Sospedra.
+            <b>Empirical Insights into the Limits and Challenges of Temporal Generalization in CSI-Based Wi-Fi Sensing</b>.  Internet of Things. 2025. IN PRESS.
+            </p>
+        </li> 
 
         <li>
             <p align="justify">Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez.
@@ -355,6 +363,20 @@
     <h3> Conferences</h3>
     <ul>
 
+ 
+        <li>
+            <p align="justify">Hector Rubio, Alex Martínez-Martínez, Raúl Montoliu, Emilio Sansano-Sansano. 
+                    <b>Detección y Consulta de Rutinas Diarias mediante algoritmos de agrupamiento temporal y modelos de lenguaje natural</b>.
+                   32th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’25). 
+                </p>
+        </li>  
+
+        <li>
+            <p align="justify">Joaquín Torres-Sospedra, Raul Montoliu, Antoni Pérez-Navarro. 
+                    <b>Análisis Retrospectivo del Dataset UJIIndoorLoc</b>.
+                   32th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’25). 
+                </p>
+        </li>  
 
         <li>
             <p align="justify">Cristian Valero-Abundio, Raúl Montoliu, Marina Martínez-García, Emilio Sansano-Sansano, Joaquín Torres-Sospedra, Antoni Pérez-Navarro. 
