--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,31 @@
 			</div>
 		</div>	
 
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Nicola Saccomanno, Andrea Brunello, Angelo Montanari, Raul Montoliu, Emilio Sansano-Sansano, Adriano Moreira, Joaquín Torres-Sospedra. 
+					<b> Empirical Insights into the Limits and Challenges of Temporal Generalization in CSI-Based Wi-Fi Sensing</b>.
+					Internet of Things. 2025. IN PRESS.
+				</div>
+			</div>
+
+		<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Hector Rubio, Alex Martínez-Martínez, Raúl Montoliu, Emilio Sansano-Sansano. 
+					<b>Detección y Consulta de Rutinas Diarias mediante algoritmos de agrupamiento temporal y modelos de lenguaje natural</b>.
+					32th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’25). 
+				</div>
+			</div>
+
+
+		<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center heading-section">
+					<p>Joaquín Torres-Sospedra, Raul Montoliu, Antoni Pérez-Navarro. 
+					<b>Análisis Retrospectivo del Dataset UJIIndoorLoc</b>.
+					32th Seminario Anual de Automática, Electrónica Industrial e Instrumentación (SAAEI’25).  
+				</div>
+			</div>	
+
 		<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section">
 					<p>Raul Montoliu, Emilio Sansano-Sansano, Marina Martínez-García, Sergio Lluva-Plaza, Ana Jiménez-Martín, José Manuel Villadangos-Carrizo, Juan Jesús García-Domínguez. 
